feat: complete function and update tables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Configuration de la base de données
-DATABASE_URL=sqlite:///./memoai.db
+DATABASE_URL=postgresql:///./memoai.db
 
 # Configuration de l'API OpenAI
 OPENAI_API_KEY=votre-cle-api-openai
